Foram acrescentadas as fotos e os itens na página com descrição e alteração minima no css. agora foi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--[if lt IE 9]>
     <link rel="stylesheet" href="css/jquery.galereya.ie.css">
     <![endif]-->
-
+    <link href="css/custom.css" rel="stylesheet"/>    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/jquery.galereya.min.js"></script>
     <script>
@@ -16,18 +16,112 @@
 </head>
 <body>
     <div id="galleryherepls">
-        <img src="path/to/thumbnail"
+       <!-- <img src="path/to/thumbnail"
             alt="Title here"
             title="Or here(more priority)"
             data-desc="some description"
             data-category="image category here"
             data-fullsrc="path/to/full/image."
-        />        
+        />
+       -->        
         ...        
-        <img src="img/costa-norte-06.jpg"
-            alt="Image"
-            data-desc="Example"
-            data-fullsrc="img/costa-norte-06.jpg"
+        <img src="img/gallery/amor1.jpg"
+            alt="Um amor..."
+            title="Um amor..."
+            data-category="afetivo"
+            data-fullsrc="img/gallery/amor1.jpg"
+        />
+        <img src="img/gallery/amornachuva.jpg"
+            alt="Um amor na chuva..."
+            title="Um amor na chuva..."
+            data-category="afetivo"
+            data-fullsrc="img/gallery/amornachuva.jpg"
+        />
+        <img src="/img/gallery/saving-beach.jpg"
+            alt="Amor na praia ..."
+            title="Amor na praia"
+            data-category="afetivo"
+            data-fullsrc="/img/gallery/saving-beach.jpg"
+        />
+        <img src="/img/gallery/familia-2.jpg"
+            alt="familia..."
+            title="Familia ..."
+            data-category="afetivo"
+            data-fullsrc="/img/gallery/familia-2.jpg"
+        />
+        <img src="/img/gallery/switchnapraia.jpg"
+            alt="Nintendo switch <3"    
+            title="nintendo Switch"
+            data-category="coisas"
+            data-fullsrc="/img/gallery/switchnapraia.jpg"
+        />    
+        <img src="img/gallery/texteira-almagemea.png"
+            alt="Alma gemea ..."
+            title="Alma gemea"
+            data-category="afetivo"
+            data-fullsrc="img/gallery/texteira-almagemea.png"
+        />
+        <img src="img/gallery/castelodublin.JPG"    
+            alt="Dublin... irlanda <3"
+            title="Dublin... irlanda <3"
+            data-category= "lugares"
+            data-fullsrc="img/gallery/castelodublin.JPG"
+        />
+        <img src="img/gallery/ruadublin.jpg"    
+            alt="Dublin... irlanda <3"
+            title="Dublin... irlanda <3"
+            data-category= "lugares"
+            data-fullsrc="img/gallery/ruadublin.jpg"
+
+        />
+        <img src="img/gallery/killkenny.jpg"    
+            alt="Dublin... irlanda <3"
+            title="Dublin... irlanda <3"
+            data-category= "lugares"
+            data-fullsrc="img/gallery/killkenny.jpg"
+        />
+        <img src="img/gallery/costa-norte-06.jpg"    
+            alt="Futura Casa <3"
+            title="Futura Casa <3"
+            data-category= "casa"
+            data-fullsrc="img/gallery/costa-norte-06.jpg"
+        />
+        <img src="img/gallery/costa-norte-10.jpg"    
+            alt="Futura Casa <3"
+            title="Futura Casa <3"
+            data-category= "casa"
+            data-fullsrc="img/gallery/costa-norte-10.jpg"
+        />
+        <img src="img/gallery/costa-norte-11.jpg"    
+            alt="Futura Casa <3"
+            title="Futura Casa <3"
+            data-category= "casa"
+            data-fullsrc="img/gallery/costa-norte-11.jpg"
+        />
+        <img src="img/gallery/HTML5_CSS_JavaScript-300x176.jpg"    
+            alt="Minhas habilidades frontend"
+            title="Minhas habilidades frontend"
+            data-category= "skills"
+            data-fullsrc="img/gallery/HTML5_CSS_JavaScript-300x176.jpg"
+        />
+        <img src="img/gallery/nodejs-logo.png"    
+            alt="Minhas habilidades frontend"
+            title="Minhas habilidades frontend"
+            data-category= "skills"
+            data-fullsrc="img/gallery/nodejs-logo.png"
+        />
+        <img src="img/gallery/react.png"    
+            alt="Minhas habilidades frontend"
+            title="Minhas habilidades frontend"
+            data-category= "skills"
+            data-fullsrc="img/gallery/react.png"
+        />
+        <img src="img/gallery/vx5-591g.jpg"    
+            alt="Meu notebook lindo , meu ACER vx5-591g"
+            title="Meu notebook lindo , meu ACER vx5-591g"
+            data-category= "coisas"
+            data-fullsrc="img/gallery/vx5-591g.jpg"
         />
     </div>
+/>    
 </body>
